<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/gato3"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView

                android:id="@+id/txtNombre"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/nombre"


                />

            <EditText
                android:id="@+id/ediNombre"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            >

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/ediTelefono"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/txtNacimiento"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/nacimiento" />

            <EditText
                android:id="@+id/ediNacimiento"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    >


    <TextView
        android:id="@+id/txtHobbie"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/hobbie"


        />

</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"

            >



            <CheckBox
                android:id="@+id/chck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/txt_hob1"
                android:textColor="#2E2E2E"
                />



            <CheckBox
                android:id="@+id/chck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textColor="#2E2E2E"
                android:checked="true"
                android:text="@string/txt_hob2"
                android:layout_toRightOf="@id/chck1"

                />

            <CheckBox
                android:id="@+id/chck3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textColor="#2E2E2E"
                android:checked="true"
                android:text="@string/txt_hob3"
                android:layout_toRightOf="@id/chck2"


                />



        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"


            >



            <TextView
                android:id="@+id/txtRegistro"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tipoRegistro"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioGroup
                android:id="@+id/radgr1"
                android:layout_below="@id/chck1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"

                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cliente"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_distribuidor"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_ambos"
                    />


            </RadioGroup>



        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingLeft="50dp">

            <Button
                android:id="@+id/btncancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:onClick="Anterior"
                android:text="@string/txt_regresar" />

            <Button
                android:id="@+id/btninicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="40dp"
                android:text="@string/txt_regis" />



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/version"

            />




    </LinearLayout>


</RelativeLayout>