<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#918E8E">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="TextView clickable!"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="25dp"
            android:contextClickable="false"
            android:onClick="Registro"

            android:text="@string/registro"
            android:textColor="#153A4E" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/gato3"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView

                android:id="@+id/txtuser"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/user"


                />

            <EditText
                android:id="@+id/eiduser"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/edituser"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtpass"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/edipass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/editpass"
                tools:ignore="TouchTargetSizeCheck"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp">

            <Button
                android:id="@+id/btncancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:text="@string/btcancel" />

            <Button
                android:id="@+id/btninicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="40dp"
                android:text="@string/btinicio" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/version"

            />


    </LinearLayout>


</RelativeLayout>